<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">keykeeper</string>
    <string name="license">THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL DEVELOPERS OR ANY OTHER CONTRIBUTOR BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. BY USING THE SOFTWARE, YOU ARE AGREEING ALL OF THE TERMS OF THIS LICENSE</string>
    <string name="options_label">Options</string>
    <string name="storage_list">Storage list</string>
    <string name="menu">Menu</string>
    <string name="add_new_storage">Add new storage</string>
    <string name="exit">Exit</string>
    <string name="pass_for_storage">Password for storage\:</string>
    <string name="cant_open_storage">Can\'t open storage</string>
    <string name="name">Name</string>
    <string name="storage_name">Storage name</string>
    <string name="password">Password</string>
    <string name="storage_password">Storage password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_storage_password">Repeat storage password</string>
    <string name="different_passwords">Different passwords</string>
    <string name="enter_storage_name">Enter storage name</string>
    <string name="storage_already_exists">Storage already exists</string>
    <string name="default_str">Default</string>
    <string name="add_new_key_storage">Add new key storage</string>
    <string name="preview_record">Preview record</string>
    <string name="name_upper">NAME</string>
    <string name="category">Category</string>
    <string name="category_upper">CATEGORY</string>
    <string name="login">Login</string>
    <string name="login_upper">LOGIN</string>
    <string name="password_upper">PASSWORD</string>
    <string name="description">Description</string>
    <string name="description_upper">DESCRIPTION</string>
    <string name="password_generation">Password generation</string>
    <string name="a_z">a-z</string>
    <string name="a_z_upper">A-Z</string>
    <string name="n0_9">0-9</string>
    <string name="chars">!@#$%^&amp;*()-_+=</string>
    <string name="length">Length</string>
    <string name="all_records">All records</string>
    <string name="show_terms_of_use">Show terms of use</string>
    <string name="category_contains_record">Category contains records. Delete anyway?</string>
    <string name="add_new_record">Add new record</string>
    <string name="record_name">Record name</string>
    <string name="record_login">Login</string>
    <string name="record_password">Password</string>
    <string name="additional_record_information">Additional information</string>
    <string name="category_name">Category name</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="remove">remove</string>
    <string name="options">Options</string>
    <string name="close_storage">Close storage</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="save_record">Save record</string>
    <string name="cancel">Cancel</string>
    <string name="save_storage">Save storage</string>
    <string name="new_storage">New storage</string>
    <string name="categories">Categories</string>
    <string name="add_new_storage_lower">add new storage</string>
    <string name="add_new_category">Add new category</string>
    <string name="close">Close</string>
    <string name="all">All</string>
    <string name="directory">Directory</string>
    <string name="changed">Changed</string>
    <string name="file">File</string>
    <string name="up">Up</string>
    <string name="export">Export</string>
    <string name="override_warning">File exist, override?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_password">Enter password</string>
    <string name="export_successful">Storage exported successful</string>
    <string name="export_error">Export error</string>
    <string name="import_label">Import</string>
    <string name="file_not_found">File not found</string>

    <string name="enter_import_information">Import information</string>
    <string name="file_password">File password</string>
    <string name="enter_file_password">Enter file password</string>
    <string name="enter_storage_password">Enter storage password</string>
    <string name="import_successful">Storage import successful</string>
    <string name="import_error">Import error</string>
    <string name="edit_name">edit name</string>
    <string name="remove_storage">remove storage</string>
    <string name="remove_storag_upper">Remove storage</string>
    <string name="select">Select file</string>
    <string name="copied_to_clipboard">copied to clipboard</string>
            
</resources>
