<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enter_import_information"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"

                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/file_password"
                android:id="@+id/textView10022"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_file_password"
                android:id="@+id/get_import_file_password"
                android:password="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/storage_name"
                android:id="@+id/textView10021"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_storage_name"
                android:id="@+id/get_import_storage_name"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/storage_password"
                android:id="@+id/textView1002"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:id="@+id/get_import_storage_password"
                android:password="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/repeat_storage_password"
                android:id="@+id/textView1003"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:id="@+id/get_import_storage_repeat_password"
                android:password="true"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

            <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:id="@+id/get_import_button_cancel"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/cancel"
                    android:scaleType="centerInside"
                    />
            <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:id="@+id/get_import_button_ok"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ok"
                    android:layout_marginRight="75dp"
                    android:scaleType="centerInside"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>