<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_storage"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textView1001"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_name"
            android:id="@+id/add_storage_name_field"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView1002"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_password"
            android:id="@+id/add_storage_password_field"
            android:password="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/repeat_password"
            android:id="@+id/textView1003"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_storage_password"
            android:id="@+id/add_storage_repeat_password_field"
            android:password="true"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        <ImageButton
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:id="@+id/add_storage_button_cancel"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:src="@drawable/cancel"
                android:scaleType="centerInside"
                />
        <ImageButton
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:id="@+id/add_storage_button_ok"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:src="@drawable/ok"
                android:layout_marginRight="75dp"
                android:scaleType="centerInside"/>
    </RelativeLayout>

</LinearLayout>