<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password_generation"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="27sp"
            android:textStyle="bold"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/a_z"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                />

        <CheckBox
                android:id="@+id/options_az_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/a_z_upper"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                />

        <CheckBox
                android:id="@+id/options_AZ_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/n0_9"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                />

        <CheckBox
                android:id="@+id/options_09_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chars"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                />

        <CheckBox
                android:id="@+id/options_sim_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/length"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                />

        <Spinner
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:id="@+id/options_length_field"/>
    </RelativeLayout>
</LinearLayout>